testing position fixed for home screen on mobile

--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -101,6 +101,7 @@
     height: 100vh;
     overflow: hidden;
     margin: 0;
+    position: fixed;
   }
   .image-container img {
     width: 90%;
